--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,25 @@
 <resources>
     <string name="app_name">AppMeuPortifolio</string>
     <string name="txt_nome_usuario">Leonardo Campos</string>
-    <string name="txt_descricaoUsuario">Leonardo Campos é um desenvolvedor Android sênior com uma paixão inigualável pela criação de experiências digitais inovadoras. Com mais de uma década de experiência no desenvolvimento de aplicativos móveis, ela traz consigo um profundo entendimento do ecossistema Android e uma dedicação incansável à excelência técnica. Habilidades Desenvolvimento Android: Especialista em Kotlin, Leonardo possui uma profunda compreensão do desenvolvimento Android nativo, entregando aplicativos robustos e eficientes. Arquitetura de Software: Experiente na implementação de arquiteturas modernas como MVVM, Clean Architecture e Jetpack Compose, garantindo código modular e de fácil manutenção. Testes Automatizados: Firme defensor da qualidade do software, Leonardo implementa testes automatizados de unidade e UI para garantir a estabilidade e a confiabilidade de cada aplicativo. Mentoria e Liderança Técnica: Além de suas habilidades técnicas, Leonardo destaca-se como mentor, compartilhando conhecimento e orientando equipes para alcançarem seu melhor desempenho.</string>
+    <string name="txt_descricaoUsuario">
+        Leonardo Campos é um desenvolvedor Android sênior com uma paixão inigualável pela criação de
+        experiências digitais inovadoras. Com mais de uma década de experiência no desenvolvimento de aplicativos móveis, ela traz consigo
+        um profundo entendimento do ecossistema Android e uma dedicação incansável à excelência técnica.\n\n\n
+
+        <b>Habilidades:</b>\n\n
+
+        <b><font color='#FF0000'>Desenvolvimento Android:</font></b> Especialista em Kotlin, Leonardo possui uma profunda compreensão do desenvolvimento Android
+        nativo, entregando aplicativos robustos e eficientes.\n\n
+
+        <b><font color='#FF0000'>Arquitetura de Software:</font></b> Experiente na implementação de arquiteturas modernas
+        como MVVM, Clean Architecture e Jetpack Compose, garantindo código modular e de fácil manutenção.\n\n
+
+        <b><font color='#FF0000'>Testes Automatizados:</font></b> Firme defensor da qualidade do software, Leonardo implementa testes automatizados de unidade e
+        UI para garantir a estabilidade e
+        a confiabilidade de cada aplicativo.\n\n
+
+        <b><font color='#FF0000'>Mentoria e Liderança Técnica:</font></b> Além de suas habilidades técnicas, Leonardo destaca-se como mentor,
+        compartilhando conhecimento e orientando equipes para alcançarem seu melhor desempenho.\n\n</string>
     <string name="txt_btnProjetos">Projetos</string>
     <string name="txt_btnContato">Contato</string>
 </resources>
