Criado Toolbar e temas personalizados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="detalhes_do_projeto">Detalhes do Projeto</string>
     <string name="projeto_pizzaria">Projeto Pizzaria</string>
     <string name="projeto_marcenaria">Projeto Marcenaria</string>
+    <string name="title_meus_projetos">Meus Projetos</string>
+    <string name="title_contatos">Contatos</string>
 </resources>
